--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "apollo-server": "^2.19.0",
     "bcrypt": "^5.0.0",
-    "browserify": "^17.0.0",
     "dotenv": "^8.2.0",
     "graphql": "^15.4.0",
     "graphql-tools": "^7.0.2",
