--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./src/index.js --exec babel-node",
-    "clean": "rm -rf build && mkdir build",
-    "build-babel": "babel src -d build ",
-    "build": "npm run build-babel",
-    "start": "npm run build && node ./build/index.js"
+
+    "start": "node ."
   },
   "author": "israel campos",
   "license": "ISC",
@@ -21,7 +19,6 @@
     "@babel/preset-env": "^7.12.11",
     "apollo-server": "^2.19.0",
     "bcrypt": "^5.0.0",
-    "browserify": "^17.0.0",
     "dotenv": "^8.2.0",
     "graphql": "^15.4.0",
     "graphql-tools": "^7.0.2",
