--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "description": "aplicación hecha con node.js graphql ",
   "main": "index.js",
   "scripts": {
+    "clean": "rm -rf build && mkdir build",
+    "build-babel": "babel -d ./build ./src -s",
     "dev": "nodemon ./src/index.js --exec babel-node",
-
-    "start": "npm run build && node ./src/index.js"
+    "build": "npm run clean && npm run build-babel",
+    "start": "npm run build && node ./build/index.js"
   },
   "author": "israel campos",
   "license": "ISC",
