--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "clean": "rm -rf build && mkdir build",
     "build-babel": "babel -d ./build ./src -s",
-    "start": "npm run build && node ./build/index.js",
+    "start": "node index",
     "build": "npm run clean && npm run build-babel",
     "dev": "nodemon ./src/index.js --exec babel-node"
   },
