--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
    
-    "start": "nodemon src/index.js --ext js,graphql --exec babel-node",
+    "start": "babel src/index.js --ext js,graphql --exec babel-node",
     
     "dev": "nodemon ./src/index.js --exec babel-node"
   },
