--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build:dev",
-    "build:dev": "babel -d \"src/index.js\" --exec babel-node",
+    "build:dev": "babel -d \"src/index.js\"",
     "dev": "nodemon ./src/index.js --exec babel-node"
   },
   "author": "israel campos",
