--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "aplicación hecha con node.js graphql ",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build:dev",
-    "build:dev": "babel-node  src/index.js",
+    "start": "babel-node  src/index.js",
     "dev": "nodemon ./src/index.js --exec babel-node" 
   },
   "author": "israel campos",
